--- a/3. Numeros/index.html
+++ b/3. Numeros/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introducción JavaScript - Desarrollo Web Completo</title>
+    <title>Números</title>
     <link href="https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -13,11 +13,11 @@
         <h1>JavaScript moderno: Felipe Peralta</h1>
         <a href="https://github.com/FepDev25/JavaScript-Moderno" target="_blank">github.com/FepDev25/JavaScript-Moderno</a>
         <p>Introducción a JavaScript</p>
-        <p class="hashtag">#Variables</p>
+        <p class="hashtag">#Numeros</p>
 
         <button type="button" id="boton">Ver Notificacion</button>
     </div>
 
-    <script src="./js/01Variables.js"></script>
+    <script src="./js/01Numeros.js"></script>
 </body>
 </html>
